--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,3 +13,25 @@ body {
   font-weight: 400;
   line-height: 240%;
 }
+
+/* Estilos del header */
+
+header {
+  position: absolute;
+  width: 440px;
+  top: 95px;
+  left: 180px;
+}
+
+header h1 {
+  font-size: 4.5em;
+  font-weight: 800;
+  line-height: 110%;
+  margin-block-end: 0em;
+  color: hsl(300, 43%, 22%);
+}
+header p {
+  font-weight: 500;
+  font-size: 1.4em;
+  color: hsl(303, 10%, 53%);
+}
